--- a/style.css
+++ b/style.css
@@ -4,18 +4,31 @@
 
 .avatar{
     width: 150px;
-    border: 3px solid #1d5c54;
+    border: 3px solid #fca311;
     border-radius: 78px;
 }
 .card{
     display: flex;
     padding: 20px;
-    background-color: #ddb39a;
+    background-color: #14213d;
     justify-content: space-around;
     width: 400px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
     text-align: center;
-    color: #2b2839;
-    border-bottom: 5px solid #1d5c54;
+    color: #e5e5e5;
+    border-bottom: 5px solid #000000;
+}
+.handles{
+    display: flex;
+    list-style: none;
+}
+li{
+    margin: -10px 10px;
+}
+.fa-brands{
+    color: #e5e5e5;
+}
+.fa-brands:hover{
+    color: #fca311;
+    transition: 0.3s;
 }
